# InsightFlow

./: .gitignore  CODE-OF-CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  Description.md  GettingStarted.md  ProjectDesign.md  README.md  ROADMAP.md  SCOPE.md  UsefulLinks.md
AtyService.Core/: AtyService.Core.sln
AtyService.Core/API.Test/: AtyService.Tests.csproj  UnitTest1.cs
AtyService.Core/AtyService.Core/: AtyService.Core.csproj  Dockerfile  WeatherForecast.cs
AtyService.Core/AtyService.Core/Controllers/: FileSystemController.cs  WeatherForecastController.cs
AtyService.Core/AtyService.Core/Properties/: launchSettings.json
AtyService.Core/Webhook.Client.Tests/: Webhook.Client.Tests.py  Webhook.Client.Tests.pyproj  main.py
src/: InsightFlow.sln
src/Agents/DataAgent/: .env.example  README.md  pyproject.toml
src/Agents/DataAgent/data_agent/: __init__.py  analysis.md  api.py  cli.py  config.py  graph.py  issue_capabilities.py  models.py  router.py  tools.py
src/Agents/DataAgent/tests/: test_router.py
src/DataManagement.Application/: DataManagement.Application.csproj
src/DataManagement.Application/Interfaces/: IRecordsRepository.cs  IRepository.cs  IUnitOfWork.cs
src/DataManagement.Domain/: DataManagement.Domain.csproj
src/DataManagement.FunctionalTests/: DataManagement.FunctionalTests.csproj  DataManagementScenariosBase.cs
src/DataManagement.Infrastructure/: DataManagement.Infrastructure.csproj  DataManagementContext.cs  DependencyInjection.cs  IRepository.cs  IUnitOfWork.cs
src/InsightFlow/: InsightFlow.sln
src/Services/Common/: Enumeration.cs  (+1 more)
(+78 files in other folders)
